# pade

./: LICENSE.txt  README.md  pade.py  pyproject.toml
examples/: example_saddle.py
src/pade/: __init__.py  pade.py
