[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pade"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Domen Šoberl", email = "domen.soberl@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Domen Šoberl/pade#readme"
Issues = "https://github.com/Domen Šoberl/pade/issues"
Source = "https://github.com/Domen Šoberl/pade"

[tool.hatch.version]
path = "src/pade/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pade tests}"

[tool.coverage.run]
source_pkgs = ["pade", "tests"]
branch = true
parallel = true
omit = [
  "src/pade/__about__.py",
]

[tool.coverage.paths]
pade = ["src/pade", "*/pade/src/pade"]
tests = ["tests", "*/pade/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
